fixed modmail icon safari

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -195,6 +195,7 @@ Details: AskReddit based theme, dark version, for single subs */
     #header-bottom-right #modmail {
         margin: 0;
         top: 0;
+vertical-align: top;
         width: 35px;
         height: 40px;
         border-right: 1px solid rgba(225,255,255,.25); }
